<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/black"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:gravity="center"
	android:orientation="vertical">

    <LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
        android:orientation="vertical">
		
        <ImageView android:id="@+id/test_image"
		   android:layout_width="fill_parent"
		   android:layout_height="fill_parent"
		   android:src="@drawable/principal"
		   android:contentDescription="@string/descricao_imagem"/>
    
    </LinearLayout>
    
    <ScrollView
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1">
    
	    <TableLayout
	        android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="1">
	    
		    <TableRow>
		        
		        <Button android:id="@+principal/btnCategoria"
			        android:layout_width="fill_parent"
			        android:layout_height="80dip"
			        android:background="@drawable/meu_botao"
			        android:text="@string/categoria"/>
		    
			    <Button android:id="@+principal/btnProduto"
			        android:layout_width="fill_parent"
			        android:layout_height="80dip"
			        android:background="@drawable/meu_botao"
			        android:text="@string/produto"/>
			    
		    </TableRow>
		    
		    <TableRow>
		        
		        <Button android:id="@+principal/btnObra"
			        android:layout_width="fill_parent"
			        android:layout_height="80dip"
			        android:background="@drawable/meu_botao"
			        android:text="@string/obra"/>
		
			    <Button android:id="@+principal/btnSair"
			        android:layout_width="fill_parent"
			        android:layout_height="80dip"
			        android:background="@drawable/botao_focus"
			        android:text="@string/sair"/>
			    
		    </TableRow>
	    
		</TableLayout>
		
	</ScrollView>
    
</LinearLayout>