<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/black"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"> 

	<TextView android:id ="@+lista_cadastro/titulo"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		android:textSize="27sp" 
		android:gravity="center" 
		android:textColor="@android:color/white"
		android:text="@string/adicionar_produto"/>
      
    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1">

	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
	  
		    <TextView
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingTop="15dip"
			    android:textColor="@android:color/white"
			    android:text="@string/produto_"/>
		        
			<TextView android:id ="@+lista_cadastro/produto"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text=""/>
		        
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@android:color/white"
			    android:text="@string/quantidade_"/>
		  
		    <EditText android:id ="@+lista_cadastro/quantidade"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:inputType="phone"
			    android:text=""/>
		  
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@android:color/white" 
			    android:text="@string/preco_"/>
		  
		    <EditText android:id="@+lista_cadastro/preco"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:inputType="phone"
			    android:text=""/>
	        
	      </LinearLayout>
      
    </ScrollView>
  
	<LinearLayout
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content" 
	  	android:baselineAligned="true" 
	  	android:gravity="center"
		android:orientation="horizontal">
    
    <Button android:id="@+lista_cadastro/btnAdicionarProduto"
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:background="@drawable/meu_botao"
	    android:text="@string/adicionar"/>
  
  </LinearLayout>
  
</LinearLayout>