<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/black"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <AutoCompleteTextView android:id="@+lista/lista_autocomplete"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:completionHint="@string/digite_o_nome_do_produto"
            android:hint="@string/digite_o_nome_do_produto"/>

        <Button android:id="@+lista/btnAdicionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/meu_botao"
            android:text="@string/adicionar"/>
        
    </LinearLayout>

    <TextView
	  	android:layout_height="wrap_content" 
	 	android:layout_width="fill_parent"
        android:textSize="27sp" 
	  	android:gravity="center" 
	 	android:textColor="@android:color/white"
	 	android:text="@string/lista"/>

    <ListView android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="348dp"
        android:divider="#FFFFFF"
        android:dividerHeight="4dip"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:baselineAligned="true"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView android:id="@+lista/total"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:text="@string/total_zerado"/>
        
    </LinearLayout>

</LinearLayout>