<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/black"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"> 

	<TextView android:id ="@+obra_cadastro/titulo" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		android:textSize="27sp" 
		android:gravity="center"
		android:textColor="@android:color/white"
		android:text="@string/cadastro_de_obra"/>
      
	    <ScrollView
		    android:layout_width="fill_parent"
		    android:layout_height="0dip"
		    android:layout_weight="1">
		
		    <LinearLayout
		    	android:layout_width="fill_parent"
		      	android:layout_height="wrap_content"
		      	android:orientation="vertical">
		  
		        <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:paddingTop="15dip"
			        android:textColor="@android:color/white"
			        android:text="@string/nome_"/>
		  
		        <EditText android:id ="@+obra_cadastro/nome"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:inputType="text"
			        android:text=""/>
		        
		        <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="@android:color/white"
			        android:text="@string/endereco_"/>
		  
		        <EditText android:id ="@+obra_cadastro/endereco"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:inputType="text"
			        android:text=""/>
		        
			</LinearLayout>
		      
	    </ScrollView>
  
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:baselineAligned="true" 
		android:gravity="center"
		android:orientation="horizontal">
    
	    <Button android:id="@+obra_cadastro/btnCadastrarObra"
		    android:layout_height="wrap_content" 
		    android:layout_width="wrap_content" 
		    android:background="@drawable/meu_botao"
		    android:text="@string/cadastrar"/>
  
  </LinearLayout>
  
</LinearLayout>